--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -304,11 +304,28 @@
                         {{relation.speaker.description}}
                       </p>
                       {% endif %}
-                      {% if relation.speaker.video_url %}
-                        <div class="abs-container-icon">
-                          <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-video"></i></a>
+                      <div class="abs-icons-container">
+                      {% if relation.speaker.twitter_url %}
+                        <div class="icon">
+                          <a href="{{relation.speaker.twitter_url}}" target="_blank"><i class="icon icon-twitter lecturer-icon"></i></a>
                         </div>
                       {% endif %}
+                      {% if relation.speaker.facebook_url %}
+                        <div class="icon">
+                          <a href="{{relation.speaker.facebook_url}}" target="_blank"><i class="icon icon-fb lecturer-icon"></i></a>
+                        </div>
+                      {% endif %}
+                      {% if relation.speaker.linked_in_url %}
+                        <div class="icon">
+                          <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/linkedin_white.svg"%}"></i></a>
+                        </div>
+                      {% endif %}
+                      {% if relation.speaker.video_url %}
+                        <div class="icon">
+                          <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-icon"></i></a>
+                        </div>
+                      {% endif %}
+                      </div>
                     </div>
                   </div>
                   <div class="lecturer-modal-wrapper">
@@ -317,6 +334,28 @@
                         <div class="close-button">X</div>
                         <div class="medium-4">
                           <img src="{{speaker_picture.url}}">
+                          <div class="icons-container">
+                          {% if relation.speaker.twitter_url %}
+                            <div class="icon">
+                              <a href="{{relation.speaker.twitter_url}}" target="_blank"><i class="icon icon-twitter lecturer-icon"></i></a>
+                            </div>
+                          {% endif %}
+                          {% if relation.speaker.facebook_url %}
+                            <div class="icon">
+                              <a href="{{relation.speaker.facebook_url}}" target="_blank"><i class="icon icon-fb lecturer-icon"></i></a>
+                            </div>
+                          {% endif %}
+                          {% if relation.speaker.linked_in_url %}
+                            <div class="icon">
+                              <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/linkedin_white.svg"%}"></i></a>
+                            </div>
+                          {% endif %}
+                          {% if relation.speaker.video_url %}
+                            <div class="icon">
+                              <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-icon"></i></a>
+                            </div>
+                          {% endif %}
+                          </div>
                         </div>
                         <div class="medium-8">
                           <div class="heading name">
