--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -317,7 +317,7 @@
                       {% endif %}
                       {% if relation.speaker.linked_in_url %}
                         <div class="icon">
-                          <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/linkedin_white.svg"%}"></i></a>
+                          <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/link_white.svg"%}"></i></a>
                         </div>
                       {% endif %}
                       {% if relation.speaker.video_url %}
@@ -347,7 +347,7 @@
                           {% endif %}
                           {% if relation.speaker.linked_in_url %}
                             <div class="icon">
-                              <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/linkedin_white.svg"%}"></i></a>
+                              <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/link_white.svg"%}"></i></a>
                             </div>
                           {% endif %}
                           {% if relation.speaker.video_url %}
