Fix broken lecturers

--- a/home/templates/website/home_page.html
+++ b/home/templates/website/home_page.html
@@ -288,7 +288,7 @@
     <section id="lecturers" class="section lecturers divider">
       <article class="container container-content">
         <div class="row">
-          <div class="medium-11 medium-centered large-11 large-centered columns">
+          <div class="small-12 medium-11 medium-centered large-11 large-centered columns">
             <h2 class="text-center">{{ page.speakers_title }}</h2>
             <div class="lecturers-wrapper">
               <div class="row">
@@ -300,9 +300,9 @@
                     <div class="text-container">
                       <h3 class="name lecturer-modal-trigger">{{relation.speaker.name}}</h3>
                       {% if relation.speaker.description %}
-                      <p class="desk">
-                        {{relation.speaker.description}}
-                      </p>
+                        <p class="desk">
+                          {{relation.speaker.description}}
+                        </p>
                       {% endif %}
                       <div class="abs-icons-container">
                       {% if relation.speaker.twitter_url %}
@@ -382,8 +382,7 @@
               </div>
             </div>
           </div>
-
-          <div class="medium-11 medium-centered large-11 large-centered columns">
+          <div class="small-12 medium-11 medium-centered large-11 large-centered columns">
             <h2 class="text-center">{{ page.workshop_speakers_title }}</h2>
             <div class="lecturers-wrapper">
               <div class="row">
@@ -395,64 +394,64 @@
                     <div class="text-container">
                       <h3 class="name lecturer-modal-trigger">{{relation.speaker.name}}</h3>
                       {% if relation.speaker.description %}
-                      <p class="desk">
-                        {{relation.speaker.description}}
-                      </p>
+                        <p class="desk">
+                          {{relation.speaker.description}}
+                        </p>
                       {% endif %}
                       <div class="abs-icons-container">
                       {% if relation.speaker.twitter_url %}
-                        <div class="icon">
-                          <a href="{{relation.speaker.twitter_url}}" target="_blank"><i class="icon icon-twitter lecturer-icon"></i></a>
-                        </div>
+                      <div class="icon">
+                        <a href="{{relation.speaker.twitter_url}}" target="_blank"><i class="icon icon-twitter lecturer-icon"></i></a>
+                      </div>
                       {% endif %}
                       {% if relation.speaker.facebook_url %}
-                        <div class="icon">
-                          <a href="{{relation.speaker.facebook_url}}" target="_blank"><i class="icon icon-fb lecturer-icon"></i></a>
-                        </div>
+                      <div class="icon">
+                        <a href="{{relation.speaker.facebook_url}}" target="_blank"><i class="icon icon-fb lecturer-icon"></i></a>
+                      </div>
                       {% endif %}
                       {% if relation.speaker.linked_in_url %}
-                        <div class="icon">
-                          <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/link_white.svg"%}"></i></a>
-                        </div>
+                      <div class="icon">
+                        <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/link_white.svg"%}"></i></a>
+                      </div>
                       {% endif %}
                       {% if relation.speaker.video_url %}
-                        <div class="icon">
-                          <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-icon"></i></a>
-                        </div>
-                      {% endif %}
+                      <div class="icon">
+                        <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-icon"></i></a>
                       </div>
+                      {% endif %}
                     </div>
                   </div>
-                  <div class="lecturer-modal-wrapper">
-                    <div class="lecturer-modal-container">
+                </div>
+                <div class="lecturer-modal-wrapper">
+                  <div class="lecturer-modal-container">
                       <div class="lecturer-modal row">
                         <div class="close-button">X</div>
                         <div class="medium-4">
                           <img src="{{speaker_picture.url}}">
                           <div class="icons-container">
-                          {% if relation.speaker.twitter_url %}
+                            {% if relation.speaker.twitter_url %}
                             <div class="icon">
                               <a href="{{relation.speaker.twitter_url}}" target="_blank"><i class="icon icon-twitter lecturer-icon"></i></a>
                             </div>
                           {% endif %}
                           {% if relation.speaker.facebook_url %}
-                            <div class="icon">
-                              <a href="{{relation.speaker.facebook_url}}" target="_blank"><i class="icon icon-fb lecturer-icon"></i></a>
-                            </div>
+                          <div class="icon">
+                            <a href="{{relation.speaker.facebook_url}}" target="_blank"><i class="icon icon-fb lecturer-icon"></i></a>
+                          </div>
                           {% endif %}
                           {% if relation.speaker.linked_in_url %}
-                            <div class="icon">
-                              <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/link_white.svg"%}"></i></a>
-                            </div>
+                          <div class="icon">
+                            <a href="{{relation.speaker.linked_in_url}}" target="_blank"><img src="{% static "images/icons/link_white.svg"%}"></i></a>
+                          </div>
                           {% endif %}
                           {% if relation.speaker.video_url %}
-                            <div class="icon">
-                              <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-icon"></i></a>
-                            </div>
-                          {% endif %}
+                          <div class="icon">
+                            <a href="{{relation.speaker.video_url}}" target="_blank"><i class="icon icon-youtube lecturer-icon"></i></a>
                           </div>
+                          {% endif %}
                         </div>
-                        <div class="medium-8">
+                      </div>
+                      <div class="medium-8">
                           <div class="heading name">
                             {{relation.speaker.name}}
                           </div>
