--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -5204,3 +5204,141 @@ div.info-slots + div.info-slots::after {
 .tab-contents > div.selected {
   display: block;
 }
+
+.schedule-container {
+  padding-top: 20px;
+}
+
+.schedule-container__tabs {
+  margin: auto;
+  display: grid;
+  grid-template-columns: 140px 140px 140px;
+  grid-template-rows: 1fr;
+  grid-column-gap: 5px;
+  width: 435px;
+}
+
+.schedule-container__tabs__tab {
+  height: 40px;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 40px;
+  background-color: #ff9900;
+  border: 1px solid #ff9900;
+  cursor: pointer;
+}
+
+.schedule-container__tabs__tab.selected {
+  background-color: white;
+  border: 1px solid #ff9900;
+}
+
+.schedlue-item-container {
+  padding-top: 40px;
+}
+
+.schedule-item {
+  border-radius: 8px;
+  border: 1px solid #ff9900;
+  background-color: white;
+  display: flex;
+}
+
+.schedule-item.schedule-event {
+  width: 230px;
+  height: 70px;
+}
+
+.schedule-item.schedule-event .schedule-item__image img {
+  width: 40px;
+}
+
+.schedule-event.schedule-event--registration {
+  width: 300px;
+  height: 70px;
+}
+
+.schedule-item.schedule-lecture {
+  width: 500px;
+  background-color: #fcfcfc;
+}
+.schedule-item.schedule-lecture + .schedule-lecture {
+  margin-left: 200px;
+}
+
+.schedule-item.schedule-break {
+  width: 300px;
+  height: 60px;
+}
+
+.schedule-item-row {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.schedule-item__hall {
+  height: 100%;
+  width: 35px;
+  background-color: #ff9900;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+.schedule-item__hall div {
+  writing-mode: vertical-lr;
+  text-orientation: sideways;
+  margin-left: 6px;
+  height: 80px;
+  transform: rotate(180deg);
+}
+
+.schedule-item__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.schedule-item__image img {
+  width: 60px;
+}
+
+.schedule-item__image img + img {
+  margin-left: 20px;
+}
+
+.schedule-item__text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  flex:1;
+}
+
+.schedile-item__text__time {
+  font-size: 16px;
+  margin-bottom: -5px;
+  margin-top: 6px;
+}
+
+.schedule-item__text__label {
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  padding-bottom: 4px;
+}
+
+.schedule-item__speaker {
+  font-size: 16px;
+}
+
+.schedule-item.schedule.event .schedule-item__text__label {
+  font-size: 24px;
+}
